Clean up code: remove unused functions and whitespace